# DroneSim

./: .gitignore  .setup_avians_ros2_complete.sh  ACTION_MODULE_TIMER_AND_HOOKS.md  AVIANS_system_technical_brief.md  MISSION_EXECUTION_ARCHITECTURE.md  MISSION_EXECUTION_DESIGN.md  MISSION_EXECUTOR_STAGE_MAP.md  MISSION_PIPELINE_PLAN.md  NMPC_工作原理与路径点生成.md  README.md  SITL.sh  SITL_ARCHITECTURE.md  bashrc_backup.sh  comprehensive_test_suite.sh  controller_tuning.py  controller_tuning.sh  debug_nmpc.py  diagnose_attitude_publishers.sh  drone_tf_publisher.py  launch_drone_simulation.py  launch_octomap_planning.py  manual_velocity_test.py  nodes_cleanup_summary.md  pixhawk_hitl_test.sh  pose_to_odom.py  ppt_prompt_for_mission_pipeline.md  rebuild_and_test.sh  setup_avians_ros2.sh  setup_drone_ros2.sh  setup_dronesim.sh  standalone_test.sh  test_avians_complete.sh  test_oscillation_fix.sh  test_rrt_standalone.py  visualization_node.py  walkthrough.md  低级控制器架构与实现原理.md
Test/: cmd_vel_step_tuning.py  controller_tuning.py  controller_tuning.sh
Test/Debug/: flight_debug_1767954251.csv  flight_debug_logger.py  flight_debug_try_to_see_pitch_problem.csv  plot_flight_debug.py
avians-docker/: Dockerfile  README.md  build.sh  docker-compose.yml  run.sh  shell.sh  stop.sh
dronesim-docker/: Dockerfile  README.md  airship_ros2_env.yml  build.sh  docker-compose.yml  run.sh  shell.sh  stop.sh
src/custom_msgs/neural_network_msgs/: package.xml
src/custom_msgs/uav_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/uav_msgs/action/: ExecuteModule.action
src/custom_msgs/uav_msgs/srv/: PlanPath.srv
src/drone_description/: CMakeLists.txt  package.xml
src/drone_description/config/: bridge.yaml  drone.rviz  drone_stereo.rviz  gui_tugbot_teleop.config
src/drone_description/launch/: gz.launch.py  gz_tuning.launch.py
src/drone_description/models/x3/: model.sdf  model_sitl.sdf
src/drone_description/models/x3_stereo/: model.config  model.sdf
src/drone_description/src/: scene_markers.cpp
src/drone_description/worlds/: city_drone_world.sdf  drone_world.sdf  drone_world_sitl.sdf  drone_world_stereo.sdf  drone_world_stereo_sitl.sdf  x3_city_world.sdf  x3_factory_rc_world.sdf  x3_factory_rc_world_sitl.sdf  x3_factory_world.sdf  x3_factory_world_sitl.sdf  x3_house_world.sdf  x3_lake_world.sdf  x3_lake_world_sitl.sdf
src/drone_guidance_controllers/: package.xml  setup.cfg  setup.py
src/drone_guidance_controllers/config/: controllers.yaml
src/drone_guidance_controllers/drone_guidance_controllers/: waypoint_controller.py  yaw_controller.py
src/drone_guidance_controllers/resource/: drone_guidance_controllers
src/drone_low_level_controllers/: CMakeLists.txt  package.xml
src/drone_low_level_controllers/config/: controllers.yaml
src/drone_low_level_controllers/drone_low_level_controllers/: controller_node.py  multicopter_velocity_control_adapter.py  velocity_controller.py  waypoint_controller.py  yaw_controller.py
src/drone_low_level_controllers/launch/: low_level_controllers.launch.py
src/drone_low_level_controllers/python_backup/: __init__.py  controller_node.py  multicopter_velocity_control_adapter.py
src/drone_low_level_controllers/src/: controller_node.cpp
src/drone_nmpc_tracker/: README.md  package.xml  setup.py
src/drone_nmpc_tracker/drone_nmpc_tracker/: __init__.py  config.py  nmpc_controller.py  nmpc_node.py  test_node.py
src/drone_state_publisher/: package.xml
src/drone_state_publisher/launch/: simulation.launch.py
src/drone_tf_publisher/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/drone_tf_publisher/drone_tf_publisher/: __init__.py  drone_tf_publisher.py
src/drone_tf_publisher/resource/: drone_tf_publisher
src/manual_mission_planner/: package.xml  setup.cfg  setup.py
src/manual_mission_planner/manual_mission_planner/: __init__.py  api_client.py  llm_config.json.example  prompt_runner.py
src/manual_mission_planner/resource/: manual_mission_planner
src/mission_action_modules/: package.xml  setup.cfg  setup.py
src/mission_action_modules/mission_action_modules/: __init__.py  action_base.py  action_manager_node.py  action_modules.py  action_server_node.py  manual_velocity_test.py  mission_sequence_controller.py  waypoint_test_runner.py
src/mission_action_modules/resource/: mission_action_modules
src/mission_executor/: package.xml  setup.cfg  setup.py
src/mission_executor/mission_executor/: __init__.py  mission_executor_node.py  path_planner_node.py
src/mission_executor/resource/: mission_executor
src/neural_network_detector/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
src/neural_network_detector/include/neural_network_detector/: yolo12_detector_node.hpp
src/neural_network_detector/src/: detection_visualizer_node.cpp  yolo12_detector_node.cpp
src/pose_cov_ops/: CMakeLists.txt  package.xml
src/pose_cov_ops/include/pose_cov_ops/: pose_cov_ops.h
src/pose_cov_ops/src/: pose_cov_ops.cpp
src/pose_cov_ops_interface/: package.xml
src/pose_cov_ops_interface/src/: pose_cov_ops_interface.cpp
src/projection_model/: package.xml
src/projection_model/src/: Projector.cpp
src/px4_bridge/: CMakeLists.txt  README.md  package.xml
src/px4_bridge/config/: px4_bridge_params.yaml
src/px4_bridge/launch/: px4_bridge.launch.py
src/px4_bridge/src/: px4_bridge_node.cpp
src/ros2_utils/: package.xml
src/ros2_utils/launch/: timestamp_monitor.launch.py
src/ros2_utils/src/: timestamp_monitor.cpp
src/slam_sim_bridge/: CMakeLists.txt  package.xml
src/slam_sim_bridge/src/: bridge_node.cpp
src/target_tracker_distributed_kf/: package.xml
src/target_tracker_distributed_kf/launch/: tracker.launch.py
src/target_tracker_distributed_kf/src/: DistributedKF3D.cpp
src/tf_from_uav_pose/: LICENSE  package.xml
src/tf_from_uav_pose/launch/: tf_from_uav_pose.launch.py
src/tf_from_uav_pose/src/: tf_from_uav_pose.cpp
src/visualization/: CMakeLists.txt  package.xml  setup.py
src/visualization/scripts/: visualization_node_entry.py
src/visualization/visualization/: visualization_node.py
(+4 files in other folders)
