<?xml version="1.0"?>
<package format="3">
  <name>manual_mission_planner</name>
  <version>0.1.0</version>
  <description>LLM-backed manual mission planner that converts free text into mission executor YAML plans.</description>
  <maintainer email="zuoyang0601@gmail.com">Yang Zuo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
