<?xml version="1.0"?>
<package format="3">
  <name>mission_executor</name>
  <version>0.1.0</version>
  <description>Behavior-tree inspired mission executor that consumes YAML missions and dispatches mission action modules.</description>
  <maintainer email="zuoyangjkpi@example.com">AVIANS Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
