<?xml version="1.0"?>
<package format="3">
  <name>pose_cov_ops</name>
  <version>0.0.1</version>
  <description>Simple SE3 pose composition helpers with covariance propagation.</description>
  <maintainer email="zuoyang0601@gmail.com">Yang Zuo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
