<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_cov_ops_interface</name>
  <version>0.0.0</version>
  <description>ROS 2 interface for pose composition operations with covariance</description>
  <maintainer email="zuoyang0601@gmail.com">Yang Zuo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>pose_cov_ops</depend>
  <depend>nav_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
