<?xml version="1.0"?>
<package format="3">
  <name>visualization</name>
  <version>0.0.1</version>
  <description>Visualization tools for DroneSim (RViz markers, paths, status).</description>

  <maintainer email="zuoyang0601@gmail.com">Yang Zuo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>neural_network_msgs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
