<?xml version="1.0"?>
<package format="3">
  <name>uav_msgs</name>
  <version>0.0.0</version>
  <description>The uav_msgs package containing messages for communication within ROS-packages</description>

  <maintainer email="zuoyang0601@gmail.com">Yang Zuo</maintainer>

  <license>Apache-2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <ros1_bridge mapping_rules="ros1_bridge_mapping_rules.yaml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
